@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-08-14T00:43:42Z",
-  "count" : 12,
+  "timestamp" : "2022-08-27T08:10:00Z",
+  "count" : 10,
   "count_minmax" : [ 2, 12 ],
-  "count_decinc" : [ -0, +12 ],
+  "count_decinc" : [ -2, +12 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
