@@ -1,10 +1,10 @@
 {
-  "count": 12,
+  "count": 10,
   "uniques": 1,
   "views": [
     {
       "timestamp": "2022-08-13T00:00:00Z",
-      "count": 12,
+      "count": 10,
       "uniques": 1
     }
   ]
