@@ -1,3 +1,11 @@
+2022-08-27T08:10:00Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2938552006
+* notice: last 14d: unq all: 1 10
+* notice: prev accum: outdated-unq outdated-all / unq all: 134 1896 / 135 1908
+* notice: next accum: outdated-unq outdated-all / unq all: 134 1896 / 135 1906
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -2 / +1 +12 -0 -2 / 1 10
+* notice: removed / changed dates: [] / [2022-08-13]
+
 2022-08-26T16:10:51Z:
 * notice: last 14d: unq all: 1 12
 * notice: prev accum: outdated-unq outdated-all / unq all: 132 1872 / 135 1894
